# MAC5750

./: .clang-format  .nvimrc  AST.cpp  AST.h  Builder.h  IR.h  IRBuilder.h  IRtest.cpp  Makefile  README.md  bcc  configure.sh  error.h  grammar.h  lexer  lexer.cpp  lexer.h  main.cpp  meson.build  parser.h  proof_of_concept.cpp  sample.miniJava  util.h
asm/: Makefile  alias.asm  fib.asm  memcpy.asm  syscall_sample.asm
input/: bad.miniJava  bad2.miniJava  bad3.miniJava  calc.miniJava  cyclic_classes.miniJava  sample.miniJava  sample2.miniJava  sample3.miniJava  sample4.miniJava  sample5.miniJava  unordered_classes.miniJava
lab/: ssa.cpp
src/: AST.h  Builder.cpp  Builder.h  IR.cpp  IR.h  IRBuilder.cpp  IRBuilder.h  IRd.cpp  class_graph.cpp  class_graph.h  codegen.cpp  codegen.h  debug.cpp  error.h  grammar.h  helper.cpp  helper.h  lab.cpp  lexer.cpp  lexer.h  logger.cpp  logger.h  main.cpp  parser.cpp  parser.h  translate.cpp  translate.h  util.h
test/: IR.cpp  IRtest.cpp  Makefile  catamorphism.cpp  helper.cpp  parsing.cpp  run_all.sh  translation.cpp
